--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <h1>
-            Page contains a script.
+            Running using live server extension.
         </h1>
     </body>
 </html>
